Arreglar acción GitHub para tests backend: usar npx -- jest

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,8 @@ jobs:
 
       - run: npm install
 
-      - run: npx jest --coverage
+      # Corrección aquí para evitar 'Permission denied'
+      - run: npx -- jest --coverage
 
   frontend-tests:
     name: Frontend - Pruebas unitarias y cobertura
